Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/092_expected_2_given1.xi
f(): int

g()
{
    x:int, y:int = f()
}
//@PRACOWNIA
//@should_not_typecheck
